# papertrail

./: .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  README.md  pyproject.toml
scripts/: install-skills.sh
skills/add-paper/: SKILL.md
skills/find-pdfs/: SKILL.md
skills/gen-bib/: SKILL.md
skills/lit-review/: SKILL.md
skills/read-paper/: SKILL.md
skills/search-papers/: SKILL.md
skills/verify-summary/: SKILL.md
src/papertrail/: config.py  converter.py  database.py  metadata.py  models.py  mount.py  paper_store.py  server.py  storage.py  sync.py  tag_similarity.py
tests/: test_converter.py  test_database.py  test_download.py  test_metadata.py  test_paper_store.py  test_server.py  test_tag_similarity.py
