[project]
name = "papertrail"
version = "0.1.0"
description = "MCP server for managing an academic paper library"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "pymupdf4llm",
    "pymupdf",
    "httpx",
    "pydantic",
    "curl_cffi",
]

[project.scripts]
papertrail = "papertrail.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/papertrail"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
